test/typecheck/bad-return-type-mismatch.txt
;;; ERROR: 1
(module
  (func (result i32)
    f32.const 0
    return))
(;; STDERR ;;;
out/test/typecheck/bad-return-type-mismatch.txt:5:5: error: type mismatch in return, expected [i32] but got [f32]
    return))
    ^^^^^^
;;; STDERR ;;)
